--- a/css/style.css
+++ b/css/style.css
@@ -1208,7 +1208,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
 }
 .navbar-fixed-top,
 .navbar-static-top {
-  background: #f3f3f4;
+  background: #e0e0e0;
 }
 .fixed-nav #wrapper {
   margin-top: 0;
@@ -1407,19 +1407,20 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 .top-navigation .nav > li > a {
   padding: 15px 20px;
-  color: #676a6c;
+  color: #595959;
 }
 .top-navigation .nav > li a:hover,
 .top-navigation .nav > li a:focus {
-  background: #fff;
   color: #1ab394;
 }
 .top-navigation .navbar .nav > li.active {
-  background: #fff;
+  background: none;
   border: none;
+
 }
 .top-navigation .nav > li.active > a {
-  color: #1ab394;
+  color: black;
+ font-weight: bold;
 }
 .top-navigation .navbar-right {
   margin-right: 10px;
@@ -1436,7 +1437,6 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
   margin-top: 0;
 }
 .top-navigation .navbar-brand {
-  background: #fff;
   color: #fff;
   padding: 5px 25px;
   font-size: 18px;
@@ -7987,6 +7987,9 @@ body.landing-page {
   padding: 10px;
   height: auto;
 }
+.navbar-brand img {
+  color: black !important;
+}
 .landing-page .header-back {
   height: 470px;
   width: 100%;
@@ -9210,7 +9213,7 @@ body.md-skin {
   font-family: 'Roboto', helvetica, arial, sans-serif;
 }
 .md-skin .nav > li > a {
-  color: #676a6c;
+  color: #0a0a0a;
   padding: 14px 20px 14px 25px;
 }
 .md-skin .nav.navbar-right > li > a {
@@ -9389,7 +9392,7 @@ body.md-skin {
   color: #1ab394;
 }
 .md-skin.landing-page.body-small .nav.navbar-right > li > a {
-  color: #676a6c;
+  color: #0a0a0a;
 }
 .md-skin .landing_link a,
 .md-skin .special_link a {
@@ -9410,7 +9413,7 @@ body.md-skin {
 }
 .md-skin.top-navigation .nav.navbar-right > li > a {
   padding: 15px 20px;
-  color: #676a6c;
+  color: #0a0a0a;
 }
 .md-skin.top-navigation .nav > li a:hover,
 .md-skin .top-navigation .nav > li a:focus,
